Fix decimal point style and hide mini display overflow

--- a/style.css
+++ b/style.css
@@ -1,249 +1,250 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #ffffff;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #ffffff;
+  box-sizing: border-box;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url(assets/background.jpg), rgba(47, 86, 98, 0.88);
-    background-position: center;
-    background-size: cover;
-    background-blend-mode: overlay;
-    overflow-x: hidden;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url(assets/background.jpg), rgba(47, 86, 98, 0.88);
+  background-position: center;
+  background-size: cover;
+  background-blend-mode: overlay;
+  overflow-x: hidden;
 }
 
 /* Bottom bar */
 body:after {
-    content: '';
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.7);
-    min-width: 320px;
-    width: 50%;
-    height: 3rem;
-    bottom: 0;
-    z-index: -1;
-    box-shadow: 0 0 4px 0px rgb(3, 2, 2), 0 0 4px 2px black;
-    backdrop-filter: blur(8px);
+  content: '';
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  min-width: 320px;
+  width: 50%;
+  height: 3rem;
+  bottom: 0;
+  z-index: -1;
+  box-shadow: 0 0 4px 0px rgb(3, 2, 2), 0 0 4px 2px black;
+  backdrop-filter: blur(8px);
 }
 
 .calculator {
-    background-color: rgba(133, 133, 133, 0.5);
-    border-radius: 0.25rem;
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem 0.4rem;
-    box-shadow: 0 0 4px black, 0 0 2px black, 0 0 4px rgb(29, 29, 29);
-    margin: 1rem;
+  background-color: rgba(133, 133, 133, 0.5);
+  border-radius: 0.25rem;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 0.4rem;
+  box-shadow: 0 0 4px black, 0 0 2px black, 0 0 4px rgb(29, 29, 29);
+  margin: 1rem;
 }
 
 .display-container {
-    position: relative;
+  position: relative;
+  overflow: hidden;
 }
 
 .display {
-    background-color: #151515;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    min-height: 80px;
-    padding: 0 10px;
-    font-family: 'JetBrains Mono', monospace;
-    font-size: 2.8rem;
-    border: 1px solid rgb(44, 44, 44);
-    overflow: hidden;
-    transition: 0.5s;
+  background-color: #151515;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  min-height: 80px;
+  padding: 0 10px;
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 2.8rem;
+  border: 1px solid rgb(44, 44, 44);
+  overflow: hidden;
+  transition: 0.5s;
 }
 
 /* Mini display containing the current operation */
 .operation {
-    position: absolute;
-    width: 100%;
-    height: 30%;
-    top: 0;
-    right: 0;
-    text-align: right;
-    padding-right: 1rem;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    background-color: rgba(0, 0, 0, 0.3);
-    color: #fff;
+  position: absolute;
+  min-width: 100%;
+  height: 30%;
+  top: 0;
+  right: 0;
+  text-align: right;
+  padding-right: 1rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #fff;
 }
 
 /* Button grid */
 .btns {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding-top: 0.4rem;
-    gap: 0.1rem;
-    background-color: transparent;
-    aspect-ratio: 0.8;
-    height: 60vh;
-    max-height: 450px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding-top: 0.4rem;
+  gap: 0.1rem;
+  background-color: transparent;
+  aspect-ratio: 0.8;
+  height: 60vh;
+  max-height: 450px;
 }
 
 .btn {
-    background-color: #070707;
-    color: #ffffff;
-    border: 1px solid rgb(44, 44, 44);
-    border-radius: 0.25rem;
-    font-size: 2rem;
-    font-weight: 600;
+  background-color: #070707;
+  color: #ffffff;
+  border: 1px solid rgb(44, 44, 44);
+  border-radius: 0.25rem;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 .btn:hover {
-    background-color: #131313eb;
+  background-color: #131313eb;
 }
 
 .btn:active {
-    background-color: #313131eb;
+  background-color: #313131eb;
+}
+
+.btn-selected {
+  background-color: #313131eb;
 }
 
 .equals {
-    background-color: #14446a;
+  background-color: #14446a;
 }
 
 .equals:hover {
-    background-color: #0470c5;
+  background-color: #0470c5;
 }
 
 .equals:active,
 .equals-selected {
-    background-color: #0078d7;
+  background-color: #0078d7;
 }
 
 .span-2 {
-    grid-column: span 2;
+  grid-column: span 2;
 }
 
 .span-3 {
-    grid-column: span 3;
+  grid-column: span 3;
 }
 
 .function {
-    background-color: #14666aa3;
+  background-color: #14666aa3;
 }
 
 .function:hover {
-    background-color: #1b858ab3;
-    border: 1px solid #252525;
+  background-color: #1b858ab3;
+  border: 1px solid #252525;
 }
 
 .function:active,
 .function-selected {
-    background-color: #20a6acb3;
-}
-
-.btn-selected {
-    background-color: #646263;
+  background-color: #20a6acb3;
 }
 
 /* Github */
 .info {
-    position: absolute;
-    bottom: 0.7rem;
+  position: absolute;
+  bottom: 0.7rem;
 }
 
 .info a {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .github-logo {
-    width: 1.5rem;
-    margin-right: 0.5rem;
+  width: 1.5rem;
+  margin-right: 0.5rem;
 }
 
 .github-user {
-    font-family: 'JetBrains Mono', monospace;
-    font-weight: 600;
-    font-size: 1.2rem;
+  font-family: 'JetBrains Mono', monospace;
+  font-weight: 600;
+  font-size: 1.2rem;
 }
 
 .credits {
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-    opacity: 0.5;
-    width: 110px;
-    text-align: right;
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  opacity: 0.5;
+  width: 110px;
+  text-align: right;
 }
 
 .credits a {
-    font-family: 'JetBrains Mono';
-    font-size: 0.8rem;
-    font-weight: 500;
+  font-family: 'JetBrains Mono';
+  font-size: 0.8rem;
+  font-weight: 500;
 }
 
 /* Responsive Design */
 @media (max-width: 1200px) {
-    .calculator {
-        width: 350px;
-    }
+  .calculator {
+    width: 350px;
+  }
 }
 
 @media (max-width: 700px) {
-    .calculator {
-        transform: translateY(-10%);
-    }
+  .calculator {
+    transform: translateY(-10%);
+  }
 
-    .credits {
-        bottom: 3.5rem;
-        right: 0;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
+  .credits {
+    bottom: 3.5rem;
+    right: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 @media (max-height: 540px) {
-    body::after {
-        left: 0;
-        min-width: 200px;
-        max-width: 200px;
-    }
+  body::after {
+    left: 0;
+    min-width: 200px;
+    max-width: 200px;
+  }
 
-    .btn {
-        font-size: 5vh;
-    }
+  .btn {
+    font-size: 5vh;
+  }
 
-    .info {
-        left: 100px;
-        transform: translateX(-50%);
-    }
+  .info {
+    left: 100px;
+    transform: translateX(-50%);
+  }
 }
 
 @media (max-width: 320px) {
-    .calculator {
-        display: block;
-    }
+  .calculator {
+    display: block;
+  }
 
-    .display {
-        min-height: 60px;
-        font-size: 2rem;
-    }
+  .display {
+    min-height: 60px;
+    font-size: 2rem;
+  }
 
-    .operation {
-        font-size: 12px;
-    }
+  .operation {
+    font-size: 12px;
+  }
 
-    .btns {
-        box-sizing: content-box;
-        height: auto;
-    }
+  .btns {
+    box-sizing: content-box;
+    height: auto;
+  }
 
-    .btn {
-        font-size: 8vw;
-    }
+  .btn {
+    font-size: 8vw;
+  }
 }
